# backtrace_oom_demo

./: README.md
app/app/: build.gradle
app/app/src/main/java/com/example/myapplication/: FirstFragment.kt  pn.kt
app/app/src/main/res/layout/: fragment_first.xml
app/gradle/wrapper/: gradle-wrapper.properties
pn/: Cargo.toml  build.rs
pn/.cargo/: config.toml
pn/src/: lib.rs  pn.udl
pn/src/uniffi/pn/: pn.kt
